Fix for http referrer not being sent when session history urls are loaded from the network. b=61426 sr=rpotts@netscape.com